--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,41 +1,54 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Gatsby CI
-
+name: Deploy app
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    branches:
+      - master
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x]
-
+    name: Build App
+    runs-on: [ubuntu-latest]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run build --if-present
-    - name: FTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      with:
-        # Deployment destination server & path. Formatted as protocol://domain.com:port/full/destination/path/
-        ftp-server: ftp://null6126.de:21/
-        # FTP account username
-        ftp-username: null6126.de
-        # FTP account password
-        ftp-password: 8K*gn7z3
-        # The local folder to copy, defaults to root project folder
-        local-dir: ./public
-        # Passes through options into git-ftp
-        # git-ftp-args: # optional
+      - name: Import commit files
+        uses: actions/checkout@master
+      - name: Get yarn cache # https://github.com/actions/cache/blob/master/examples.md#node---yarn
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install Dependencies
+        run: yarn install
+      - name: Build
+        run: yarn build
+      - name: Upload bundle
+        uses: actions/upload-artifact@master
+        with:
+          name: my_artifact_name # Upload artifact with name `dist`
+          path: public # Upload content of `dist` folder
+      - name: Debug Files
+        run: ls
+  deploy:
+    name: Deploy App
+    runs-on: [ubuntu-latest]
+    needs: [build]
+    steps:
+      - name: Download bundle
+        uses: actions/download-artifact@master
+        with:
+          name: my_artifact_name # Download artifact named `my_artifact_name` (matches build step: Upload bundle)
+          path: public # Optional, downloads to current working directory under folder {artifact_name} if not specified
+      - name: Debug Files
+        run: ls
+      - name: Upload to FTP
+        uses: isthatcentered/dist-to-ftp@master
+        with:
+          user: ${{ secrets.FTP_USER }} # Ftp user Ex:
+          password: ${{ secrets.FTP_PASSWORD }} # Ftp password Ex:
+          host: ${{ secrets.FTP_HOST }} # Ftp host Ex:
+          port: ${{ secrets.FTP_PORT }} # (optional) FTP port, defaults to 21
+          path: public # Folder to deploy Ex: apps/frontend/dist or dist
+          into: public # Where to place the files in your ftp
+          cleanupExisting: true # (Optional), Remove already existing files insi
